fixed lyric overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,7 @@ iframe {
 
 #lyrics {
     overflow-y: scroll;
-    max-height: 675px;
+    max-height: 550px;
 }
 
 footer {
